# Factelo

./: .gitignore  LICENSE  README.en.md  README.md  README.pt.md  README.zh.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop-default.json
src-tauri/migrations/: 0001_initial.sql  0002_facturae_extras.sql  0003_registro_inalterable.sql  0004_condiciones_pago.sql  0005_analytics_views.sql  0006_clientes_extended.sql  0007_envio_aeat_log.sql
src-tauri/permissions/: app.toml
src-tauri/src/: aeat.rs  audit.rs  auth.rs  commands.rs  db.rs  error.rs  facturae.rs  keychain.rs  logger.rs  main.rs  pdf.rs  xades.rs
src-tauri/templates/: advanced_stats_report.html  invoice.html
src/components/dashboard/: RecentInvoices.tsx  RevenueChart.tsx  StatCard.tsx
src/components/invoices/: InvoiceForm.tsx  InvoiceLineRow.tsx
src/components/layout/: AppLayout.tsx  Sidebar.tsx  Topbar.tsx
src/components/settings/: BackupsTab.tsx  EmpresaTab.tsx  SeriesTab.tsx
src/hooks/: useIntegrityCheck.ts  useInvoiceTotals.ts  useOnboarding.ts  useTauriCommand.ts  useUpdater.ts
src/lib/: api.ts  queryClient.ts  utils.ts
src/pages/: AdvancedStatsView.tsx  AnalyticsDashboard.tsx  ClientesPage.tsx  DashboardPage.tsx  FacturasPage.tsx  InvoiceNewPage.tsx  OnboardingPage.tsx  ProductosPage.tsx  SettingsPage.tsx
src/stores/: sessionStore.ts
src/styles/: globals.css
src/types/: index.ts
(+13 files in other folders)
