[package]
name = "factelo-backend"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1.0"
argon2 = "0.5"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
dirs-next = "2.0"
headless_chrome = "1"
hex = "0.4"
image = { version = "0.25", default-features = false, features = ["png"] }
qrcodegen = "1.8"
quick-xml = { version = "0.38", features = ["serialize"] }
rand_core = { version = "0.6", features = ["getrandom"] }
rust_decimal = { version = "1", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Security_Cryptography",
    "Win32_Storage_FileSystem",
] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "migrate", "macros", "rust_decimal"] }
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tera = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2"
